--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="textbox contact" *ngIf="isOnContact()">
             <div class="jobs">Let's work together!</div>
-            <form>
+            <form action="mailto:marius.hummel@bluewin.ch?subject=Let's work together!&body=message" method="post">
                 <div class="form-group field">
                     <input type="text" class="form-field" placeholder="Your name...*" name="name" id='name' required />
                 </div>
@@ -20,13 +20,10 @@
                     <input type="email" class="form-field" placeholder="Email*" name="email" id='email' required />
                 </div>
                 <div class="form-group field">
-                    <input type="text" class="form-field" placeholder="Company" name="company" id='company' />
-                </div>
-                <div class="form-group field">
                     <input type="text" class="form-field" placeholder="Message*" name="message" id='message' required />
                 </div>
                 <div class="buttoncontainer">
-                    <button class="btn draw-border" type="submit">Send message</button>
+                    <button class="btn draw-border" type="submit">Send a mail</button>
                     <button class="btn" (click)="onContact()"><- Back to Home</button>
                 </div>
             </form>
