--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -34,7 +34,7 @@
       }
     }
     .textbox {
-      margin-top: -13rem;
+      margin-top: -8rem;
       top: 50%;
       bottom: 50%;
       left: 15%;
@@ -46,7 +46,6 @@
       color: #121212;
       .jobs {
         font-size: 3.5rem;
-        margin-bottom: 5vh;
       }
 
       .form-field {
@@ -242,5 +241,14 @@
   margin-top: 4rem;
   width: 100%;
   height: 86%;
-  background-color: #2c3e50;
+  background-color: rgb(59, 59, 59);
+  .comingsoon {
+    position: relative;
+    top: 40%;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-family: "Pathway Extreme", sans-serif;
+    font-size: 4rem;
+  }
 }
