--- a/src/app/home/home.responsive.scss
+++ b/src/app/home/home.responsive.scss
@@ -76,7 +76,7 @@
       left: 50%;
       top: 60%;
       margin-left: -3.75rem;
-      margin-top: -3.5rem;
+      margin-top: -2rem;
       width: 110px;
       height: 110px;
     }
@@ -101,7 +101,9 @@
     margin-top: 4rem;
     width: 100%;
     height: 85%;
-    background-color: #2c3e50;
+    .comingsoon {
+      line-height: 1;
+    }
   }
 }
 
