--- a/src/app/home/home.responsive.scss
+++ b/src/app/home/home.responsive.scss
@@ -8,7 +8,7 @@
         width: 70%;
         line-height: 3rem;
         .name {
-          margin-top: 5rem;
+          margin-top: 0rem;
           font-size: 1rem;
         }
         .jobs {
@@ -16,6 +16,7 @@
         }
         .text {
           font-size: 0.8rem;
+          line-height: 1.5rem;
         }
         .seemore {
           font-size: 1.5rem;
@@ -25,7 +26,7 @@
 
     .showoff {
       display: flex;
-      margin-top: 5rem;
+      margin-top: 10rem;
       width: 100%;
       height: 40%;
       float: none;
@@ -76,7 +77,7 @@
       left: 50%;
       top: 60%;
       margin-left: -3.75rem;
-      margin-top: -2rem;
+      margin-top: -3.75rem;
       width: 110px;
       height: 110px;
     }
@@ -93,12 +94,12 @@
 
   #selected {
     .selected-title {
-      margin-top: 10rem;
+      margin-top: 12rem;
       width: 4000%;
     }
   }
   .selected-show {
-    margin-top: 4rem;
+    margin-top: 2rem;
     width: 100%;
     height: 85%;
     .comingsoon {
