--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -158,7 +158,7 @@
 .selected-show {
   margin-top: 4rem;
   width: 100%;
-  height: 90%;
+  height: 85vh;
   background-color: rgb(59, 59, 59);
   .comingsoon {
     position: relative;
