change images to webp

--- a/src/app/home/home.showoff.scss
+++ b/src/app/home/home.showoff.scss
@@ -22,56 +22,56 @@
         height: 32.7cqb;
       }
       .pic-l1 {
-        background-image: url(./../../assets/images/webdesign.jpg);
+        background-image: url(./../../assets/images/webdesign.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 180%;
       }
       .pic-l2 {
-        background-image: url(./../../assets/images/artz.jpg);
+        background-image: url(./../../assets/images/artz.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 120%;
       }
       .pic-l3 {
-        background-image: url(./../../assets/images/head.jpg);
+        background-image: url(./../../assets/images/head.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 250%;
       }
 
       .pic-m1 {
-        background-image: url(./../../assets/images/otter.png);
+        background-image: url(./../../assets/images/otter.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 130%;
       }
       .pic-m2 {
-        background-image: url(./../../assets/images/coolglasses.jpg);
+        background-image: url(./../../assets/images/coolglasses.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 225%;
       }
       .pic-m3 {
-        background-image: url(./../../assets/images/chair.jpg);
+        background-image: url(./../../assets/images/chair.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 300%;
       }
       .pic-r1 {
-        background-image: url(./../../assets/images/headd.jpg);
+        background-image: url(./../../assets/images/headd.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 250%;
       }
       .pic-r2 {
-        background-image: url(./../../assets/images/toyko.png);
+        background-image: url(./../../assets/images/toyko.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 130%;
       }
       .pic-r3 {
-        background-image: url(./../../assets/images/bvabo.jpg);
+        background-image: url(./../../assets/images/bvabo.webp);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 150%;
